Country code alignment fiixed , questions alignnment fixed

--- a/src/app/modules/admin/pages/applicantpage/applicantpage.component.scss
+++ b/src/app/modules/admin/pages/applicantpage/applicantpage.component.scss
@@ -183,4 +183,8 @@
 ::ng-deep .countryCode3 .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-outline .mat-form-field-outline-start {
     width: 85px !important;
 }
+::ng-deep .noCountryCode .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-outline .mat-form-field-outline-start {
+    width: 54px !important;
+}
+
 
